--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "socket.io-client": "^4.2.0",
     "swiper": "6.0.2",
     "tailwind-scrollbar-hide": "^1.0.3",
     "uuid": "^8.3.2",
