--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.22.0",
     "framer-motion": "^4.1.17",
+    "moment": "^2.29.1",
     "nanoid": "^3.1.28",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -15,6 +17,7 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
     "socket.io-client": "^4.2.0",
     "swiper": "6.0.2",
     "tailwind-scrollbar-hide": "^1.0.3",
